Tue Jul 29 23:09:16 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: For INDEX_EXACT, TAG and FACET term
	  queries, multiply the weight by 0 to tell xapian that the weight
	  is always zero, and allow better optimisation.
	* xappy/doctests/indexerconnection_doctest2.txt: Update expected
	  query to correspond to this change.
	* xappy/doctests/searchconnection_doctest2.txt: Modify expected
	  percentage weight to align with recent rounding fixes in xapian's
	  percentage weight calculation routines.

Fri Jul 18 12:57:56 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: If a query is empty, don't require that it has a
	  search connection in get_max_possible_weight() - we know that the
	  maximum weight of an empty query is 0, and relaxing this
	  restriction makes it more convenient to write code.

Thu Jul 10 13:30:12 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Updated versions of the tarballs (difference
	  since the previous versions is some build system updates and a
	  performance improvement).
	* utils/make_xappy_tarballs: Update branchpoint version numbers.

Wed Jul 09 15:12:40 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Yet another version, since the last one
	  didn't fix autoreconf either.

Wed Jul 09 14:49:35 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: And another upload, this time to fix
	  autoreconf.

Wed Jul 09 14:14:28 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: And another set of updated packages!

Wed Jul 09 11:55:40 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: New version to fix segfault.

Wed Jul 09 08:23:21 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Updated packages.

Fri Jul 04 17:10:46 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
