@@ -1,3 +1,8 @@
+Sun Aug 03 11:25:18 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/weight_action.py: Make the comment on
+	  test_regression() more explanatory.
+
 Tue Jul 29 23:09:16 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: For INDEX_EXACT, TAG and FACET term
